--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -63,15 +63,15 @@
  IRE_treet:0 "조약항 회수"
  IRE_treet_desc:0 "아일랜드 독립 전쟁 후에, 우리는 평화 협정에서 영국인들에게 아일랜드 항구를 양도했습니다. 하지만, 우리는 영국-아일랜드 무역전쟁에서 평화협정으로 이것들을 되찾아 더 많은 수출산업을 자유롭게 할 수 있을 것입니다."
  IRE_coa:0 "에이레 (협의 완료) 법"
- IRE_coa_desc:0 "This Act will see the end of the Anglo-Irish trade war, allowing imports and exports to flow between our nations and give much industrial control back to Ireland."
+ IRE_coa_desc:0 "영국-아일랜드 무역전쟁을 끝낼 이 법은 국가간의 수출과 수입을 자유롭게 하도록 허락하고 아일랜드에 더 많은 산업의 통제권을 돌려줄 것입니다."
  IRE_magfort:0 "매거진 요새"
- IRE_magfort_desc:0 "The Magazine Fort is an ancient fort dating back to 1735. It was given to us in 1922 after the War of Independence, and we can repurpose it as an ammunition store."
+ IRE_magfort_desc:0 "매거진 요새는 1735년부터 거슬러 올라가는 고대의 요새입니다. 독립전쟁 후인 1922년에 우리에게 준 것인데, 탄약고로서 용도를 바꿀 수 있을 것입니다."
  IRE_xmas:0 "IRA 군수품 회수"
- IRE_xmas_desc:0 "The IRA constantly steal from Irish munition stores as terrorist acts against the pro-treaty Government. However, we can seek out cells of the IRA and reclaim these munitions."
+ IRE_xmas_desc:0 "IRA는 여전히 영국-아일랜드 조약 정부에 대한 테러 행위로써 아일랜드 군수품 창고에서 약탈을 일삼고 있습니다. 그러나, 우리는 IRA의 세포들을 찾아 낼수 있고 이 군수품들을 회수 할 수 있습니다."
  IRE_1stamend:0 "헌법 1차 개정"
- IRE_1stamend_desc:0 "War is certain in Europe and the wounds of the Great War fester in Germany. We must amend our constitution to leave us better equipped for the oncoming storm, granting the Oireachtas the power to declare a state of emergency."
+ IRE_1stamend_desc:0 "유럽에서는 전쟁이 일어날 것이 확실하며 독일에서는 대전쟁의 상처가 악화되고 있습나다. 우리는 다가오는 폭풍우에 더 잘 대비할 수 있도록 우리의 헌법을 개정해야 하며, 에러크터스에게 비상사태를 선포할 수 있는 권한을 부여해야 합니다."
  IRE_air1:0 "항공 부대"
- IRE_air1_desc:0 "Closer ties with the United Kingdom allow us to purchase better aircraft from them, which we will need if war is to break out."
+ IRE_air1_desc:0 "영국과의 긴밀한 유대를 통해 우리는 그들로부터 전쟁이 나면 필요해질 더 나은 항공기를 구입할 수 있을 것입니다."
  IRE_air2:0 "글로스터 글래디에이터"
  IRE_air2_desc:0 "War is coming ever closer. We must bolster the Air Corps with aircraft from the United Kingdom, including the Goster Gladiator bi-planes."
  IRE_air3:0 "호커 허리케인"
@@ -129,19 +129,19 @@
  IRE_belfast_blitz:0 "벨파스트 전격전"
  IRE_axisalignger:0 "추축국과 함께하는 아일랜드"
  IRE_axisalignuk:0 "아일랜드는 추축국과 함께한다"
- IRE_communist_ira:0 "Influence IRA's Ideology"
- IRE_communist_ira_desc:0 "Oppose to Monarchists and willing to unite, Ireland, the Irish republican army pursues goals that are compatible with ours. We must just show them the benefits that socialism will bring upon mankind."
- IRE_celtic_way:0 "The Celtic Way"
- IRE_celtic_way_desc:0 "Our own path lies ahead."
- IRE_paramilitarism_idea:0 "Irish Paramilitarism"
-ireland.1.t:0 "Malcolm MacDonald"
-ireland.1.d:0 "Malcolm MacDonald, who negotiated with the Irish Free State along with Neville Chamberlain, has been sent to Ireland to meet with us and discuss an interesting proposal. The UK offers to recind the partition of Ireland, returning Northern Ireland to our control, as long as we join the Allied war effort."
-ireland.1.a:0 "Ireland shall be one!"
-ireland.1.b:0 "Britain's defeat is inevitable!"
-ireland.2.t:0 "Plan W"
-ireland.2.d:0 "German aggression has not gone unnoticed. The British have come to us with secured intelligence detailing a German invasion of Britain, named Operation Sea Lion, and even of Ireland, Operation Green. We must take steps to protect against this, even if it means aligning with the Allies. \n\n The British claim to have our best interests at heart, and want to further relations with us."
-ireland.2.a:0 "Irish Blood, English Heart!"
-ireland.2.b:0 "We must stay out of this conflict"
+ IRE_communist_ira:0 "IRA의 이념에 영향"
+ IRE_communist_ira_desc:0 "군주제에 반대하고 통합된 아일랜드를 원하는 아일랜드 공화국군은 우리와 양립할 수 있는 목표를 추구합니다. 우리는 사회주의가 인류에게 가져다줄 이익을 그들에게 보여줘야 합니다."
+ IRE_celtic_way:0 "켈트의 길"
+ IRE_celtic_way_desc:0 "우리의 길은 앞에 있다."
+ IRE_paramilitarism_idea:0 "아일랜드 준군사주의"
+ireland.1.t:0 "말콤 맥도날드"
+ireland.1.d:0 "네빌 체임벌린과 함께 아일랜드 자유주(Irish Free State)와의 협상을 벌였던 말콤 맥도날드는 아일랜드로 보내져 우리와 만나 흥미로운 제안을 논의하게 되었습니다. 영국은 아일랜드의 분할을 재검토할 것을 제안하고, 우리가 연합국 전쟁 동원에 동참하는 한 북아일랜드를 우리의 통제 하에 되돌려놓기로 하였습니다."
+ireland.1.a:0 "아일랜드는 하나여만 한다!"
+ireland.1.b:0 "영국의 패배는 필연적이다!"
+ireland.2.t:0 "W 계획"
+ireland.2.d:0 "독일의 공격성은 눈에 띄지 않게 사라지지 않았다. 영국인들은 독일군의 영국 침략을 상세히 기록한 바다사자 작전과 아일랜드에 대한 녹색 작전을 상세히 기록한 확실한 정보를 가지고 우리에게 왔습니다. 비록 그것이 연합군과 제휴하는 것을 의미하더라도, 우리는 이를 막기 위한 조치를 취해야 합니다. \n\n 영국인들은 우리의 최선의 이익을 마음 속에 두고 있으며, 우리와 더 많은 관계를 맺고 싶어한다고 주장하고 있습니다.
+ireland.2.a:0 "아일랜드인의 혈통, 영국인의 마음!"
+ireland.2.b:0 "우리는 이 분쟁과 거리를 두어야만 한다."
 news.31311.t:0 "Belfast Blitz"
 news.31311.d:0 "German bombers have attacked the Northern Irish city of Belfast in three raids, now being called the 'Belfast Blitz'. Approximately 1000 people have died as a result, with a further 1500 injured. Southern Irish firefighters have joined the fray to help their Irish brethren. \n\n The Republic's official statement is that 'the people of Belfast are Irish people too'. "
 news.31311.a:0 "What a shame"
@@ -176,10 +176,10 @@ news.3132.t:0 "The Glimmer Men"
 news.3132.d:0 "The supply of coal in Ireland is dwindling, many of the gasworks have shut down. While research is being done into using peat rather than coal, the Irish government has begun to tighten controls on gas supply, with the Minister for Supplies threatening an official ration of gas. \n\n This has lead to inspectors checking people are not using gas at restricted times, being nicknamed 'glimmer men' by the Irish people."
 news.3132.a:0 "Dev, the gas stove and the glimmerman"
 news.3132.b:0 "Okay"
-IRE_neutral:0 "Irish Neutrality"
-IRE_neutral_desc:0 "Ireland remains neutral in the war, simultaneously respecting Germany, maintaing it's sovereignity away from Britain and aiding both war efforts."
-IRE_ira:0 "Irish Republican Army"
-IRE_ira_desc:0 "Despite Ireland winning it's independence with the Anglo-Irish Treaty of 1921, the anti-treaty IRA opposes the government and the British, and continue to weaken the Irish state."
-IRE_sean_russell:0 "Seán Russell"
-IRE_coal_rationing:0 "Coal Rationing"
-LOADING_TIP_313:0 "It is humiliating to remain with our hands folded while others write history. It matters little who wins.\n- Benito MussoliniIf war comes upon us, it will come as a thief in the night. \n  -Eamon de Valera"
+IRE_neutral:0 "아일랜드 중립성"
+IRE_neutral_desc:0 "아일랜드는 전쟁에서 중립을 지키는 동시에 독일을 존중하며, 영국으로부터 거리를 둔 주권국가로써 양측에 전쟁 물자를 지원할 것입니다."
+IRE_ira:0 "아일랜드 공화국군"
+IRE_ira_desc:0 "아일랜드가 1921년 영국-아일랜드 조약으로 독립을 쟁취했음에도 불구하고, 반 조약파인 IRA는 정부와 영국을 반대하고 아일랜드 국가를 계속 약화시키고 있습니다."
+IRE_sean_russell:0 "숀 러셀"
+IRE_coal_rationing:0 "석탄 배급제"
+LOADING_TIP_313:0 "다른 이들이 역사를 만들동안 손을 가만히 있는것은 굴욕적인 일이다. 누가 이기는지는 별로 중요하지 .\n- 베니토 무솔리니 전쟁은 다가오고 있으며, 그것은 밤중의 도둑처럼 올것이다. \n  -에이먼 데 벌레라"
