--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -73,15 +73,15 @@
  IRE_air1:0 "항공 부대"
  IRE_air1_desc:0 "영국과의 긴밀한 유대를 통해 우리는 그들로부터 전쟁이 나면 필요해질 더 나은 항공기를 구입할 수 있을 것입니다."
  IRE_air2:0 "글로스터 글래디에이터"
- IRE_air2_desc:0 "War is coming ever closer. We must bolster the Air Corps with aircraft from the United Kingdom, including the Goster Gladiator bi-planes."
+ IRE_air2_desc:0 "전쟁이 점점 가까워지고 있습니다. 우리는 글로스터 글래디에이터 복엽기를 포함한 영국의 항공기로 공군부대를 강화해야 합니다."
  IRE_air3:0 "호커 허리케인"
- IRE_air3_desc:0 "If we are to remain safe from invasion, we must modernize the Air Corps, starting with the Hawker Hurricane fighters."
- IRE_navy1:0 "해병 및 해안경비대"
- IRE_navy1_desc:0 "War looms, and if we are to remain neutral as we plan to, we must defend our waters. With the Royal Navy withdrawing from treaty ports, we can re-establish a naval service."
- IRE_navy2:0 "해병대"
- IRE_navy2_desc:0 "The Marine and Coastal Service is growing, and is protecting our waters and civilian vessels, even beyond our coast. We will rename it 'The Marine Service'"
+ IRE_air3_desc:0 "만약 우리가 침략으로부터 안전하고자 한다면, 우리는 호커 허리케인 전투기를 시작으로 하여 항공 군단을 현대화해야 합니다."
+ IRE_navy1:0 "해양 및 해안 관리국"
+ IRE_navy1_desc:0 "전쟁이 발발하고, 우리가 계획한 대로 중립을 지키려면 우리의 바다를 지켜야 합니다. 영국 해군이 조약항에서 철수하면, 우리는 해군 조직을 다시 시작할 수 있습니다."
+ IRE_navy2:0 "해양국"
+ IRE_navy2_desc:0 "해양 및 해안 관리국은 성장하고 있으며, 우리의 바다와 민간 선박을 해안너머에서도 지키고 있습니다. 우리는 이 기관을 '해양국' 으로 재명명 할 것입니다."
  IRE_navy3:0 "해군"
- IRE_navy3_desc:0 "It is clear the Marine Service is not enough, and so we will disband it and establish the Naval Service as a permanent part of the Defence Forces."
+ IRE_navy3_desc:0 "해양부로는 충분하지 않다는 것은 분명하므로, 우리는 그것을 해체하고 해군청을 방위군의 상설 부대로써 설립할 것입니다."
  IRE_inf:0 "보드 나 모나"
  IRE_inf_desc:0 "We must build up Irish infrastructure, as well as stockpiling fuel and providing electricity."
  IRE_nuke:0 "ESB 동원"
@@ -126,7 +126,7 @@
  IRE_comintern_desc:0 "If we plan to go to war with Britain, we cannot do so alone. Ireland must align itself with the Comintern and hopefully seek an alliance to reclaim Northern Ireland."
  IRE_cominvasion:0 "북아일랜드 영유권 재주장"
  IRE_cominvasion_desc:0 "With the backing of the Comintern and Soviet powers, we can invade Britain and reclaim Northern Ireland for the Republic of Ireland."
- IRE_belfast_blitz:0 "벨파스트 전격전"
+ IRE_belfast_blitz:0 "벨파스트 급습"
  IRE_axisalignger:0 "추축국과 함께하는 아일랜드"
  IRE_axisalignuk:0 "아일랜드는 추축국과 함께한다"
  IRE_communist_ira:0 "IRA의 이념에 영향"
@@ -142,24 +142,24 @@ ireland.2.t:0 "W 계획"
 ireland.2.d:0 "독일의 공격성은 눈에 띄지 않게 사라지지 않았다. 영국인들은 독일군의 영국 침략을 상세히 기록한 바다사자 작전과 아일랜드에 대한 녹색 작전을 상세히 기록한 확실한 정보를 가지고 우리에게 왔습니다. 비록 그것이 연합군과 제휴하는 것을 의미하더라도, 우리는 이를 막기 위한 조치를 취해야 합니다. \n\n 영국인들은 우리의 최선의 이익을 마음 속에 두고 있으며, 우리와 더 많은 관계를 맺고 싶어한다고 주장하고 있습니다.
 ireland.2.a:0 "아일랜드인의 혈통, 영국인의 마음!"
 ireland.2.b:0 "우리는 이 분쟁과 거리를 두어야만 한다."
-news.31311.t:0 "Belfast Blitz"
-news.31311.d:0 "German bombers have attacked the Northern Irish city of Belfast in three raids, now being called the 'Belfast Blitz'. Approximately 1000 people have died as a result, with a further 1500 injured. Southern Irish firefighters have joined the fray to help their Irish brethren. \n\n The Republic's official statement is that 'the people of Belfast are Irish people too'. "
-news.31311.a:0 "What a shame"
-news.31311.b:0 "They are our people."
-news.31311.c:0 "A shameful display by the Axis!"
-news.31311.e:0 "Perhaps we should reconsider our relationship with Ireland."
-news.3137.t:0 "Ireland Aligns With Axis"
-news.3137.d:0 "Ireland has announced it will expel Allied diplomats and further ties with the Axis powers. \n\n Hitler reportedly cheered the news, stating that '(the) Irish have a long history of proud warriors, and will be a lifelong partner and valued ally against the English'"
-news.3137.a:0 "The Axis grows..."
-news.3137.b:0 "This will make us stronger!"
-news.3137.c:0 "A dark day for the Empire..."
-news.3137.e:0 "Welcome Eire!"
-news.3138.t:0 "Ireland Aligns With Comintern"
-news.3138.d:0 "Ireland has announced it will expel Allied diplomats and further ties with the Comintern powers. \n\n Soviet diplomats in Ireland were reportedly surprised, having no idea the Irish were even interested in joining, but Soviet generals have cheered the news due to the strategic benefits of Ireland."
-news.3138.a:0 "The Comintern grows..."
-news.3138.b:0 "Solidarity for all workers!"
-news.3138.c:0 "A dark day for the Empire..."
-news.3138.e:0 "Another step for world revolution!"
+news.31311.t:0 "밸파스트 급습"
+news.31311.d:0 "독일 폭격기들이 북아일랜드의 도시 벨파스트를 세 번의 공습으로 공격했는데, 지금은 '벨파스트 급습'으로 불리고 있습니다. 그 결과 약 1000명이 사망했고 1500명이 추가로 부상당했습니다. 남부 아일랜드 소방관들은 그들의 아일랜드 동포들을 돕기 위한 싸움에 합류했습니다. \n\n 공화국의 공식 입장은 '벨파스트의 사람들도 아일랜드인들이다' 입니다. "
+news.31311.a:0 "그것 참 안됐군"
+news.31311.b:0 "그들도 우리 사람이다."
+news.31311.c:0 "추축국의 부끄러운 자기과시이다!"
+news.31311.e:0 "아마도 우리는 아일랜드와의 관계를 재고해야 할지도 모른다."
+news.3137.t:0 "아일랜드가 추축국에 가입하다"
+news.3137.d:0 "아일랜드는 연합국 외교관들을 추방하고 추축국들과 더 많은 관계를 맺을 것이라고 발표했습니다. \n\n 보도에 따르면, 히틀러는 '아일랜드인들은 오랜 자랑스러운 전사들의 역사를 가지고 있으며 평생의 동반자가 될 것이자 영국에 맞서는 가치 있는 동맹이 될 것이다'라고 말하면서 이 소식을 응원했다고 합니다."
+news.3137.a:0 "추축국이 성장하는군..."
+news.3137.b:0 "이는 우리를 강하게 해줄 것이다!"
+news.3137.c:0 "제국의 암흑의 날이다..."
+news.3137.e:0 "환영한다 에이레!"
+news.3138.t:0 "아일랜드가 코민테른에 가입하다"
+news.3138.d:0 "아일랜드는 연합국 외교관들을 추방하고 코민테른과 더 많은 관계를 맺을 것이라고 발표했습니다. \n\n 아일랜드 주재 소련 외교관들은 아일랜드인들이 가입에 관심이 있는 줄도 모르고 깜짝 놀랐다고 하지만 소련의 장군들은 아일랜드의 전략적 이익 때문에 이 소식에 환호했습니다."
+news.3138.a:0 "코민테른이 성장하는군..."
+news.3138.b:0 "모든 노동자들을 위한 연대다!"
+news.3138.c:0 "제국의 암흑의 날이다..."
+news.3138.e:0 "세계혁명을 위한 또 다른 발걸음이다!"
 news.3139.t:0 "The Christmas Raid"
 news.3139.d:0 "On the 23rd December 1939, the IRA raided the Magazine Fort in Dublin. \n\n Though they had managed to mostly seize Irish munitions, they were reclaimed very shortly afterwards, and many IRA volunteers were caught and arrested. Many high ranking IRA members have been executed, and the Oireachtas have been given emergency powers to deal with this crisis."
 news.3139.a:0 "A victory for Ireland!"
