--- a/SER_l_english.yml
+++ b/SER_l_english.yml
@@ -76,13 +76,13 @@ l_english:
    SER_NAV_effort_desc:0 "Just as the new naval warfare takes place in part beneath the water's surface, part of it takes place in the air above the waters."
 
    ######################NAVY###################
-   SER_expand_the_split_shipyards:0 "몬테네그로 조병창을 확장하다."
+   SER_expand_the_split_shipyards:0 "몬테네그로 조병창을 확장"
    SER_expand_the_split_shipyards_desc:0 "Our pre-existing shipbuilding industry in Montenegro is a prime candidate for expansion, and has ample facilities allowing for larger warships."
    SER_coastal_defense:0 "해안 방비"
    SER_coastal_defense_desc:0 "We cannot hope to contest our adversaries' fleets in the Adriatic. Instead, we must prepare our shores to repel any naval invasions they might attempt."
    SER_contest_the_adriatic:0 "Contest the Adriatic"
    SER_contest_the_adriatic_desc:0 "The defense of our shores begins in the sea that lies beyond them. We must develop new naval tactics and strategies to wrest control or at least contest the Adriatic Sea."
-   SER_light_cruiser:0 "경순양함을 설계하다"
+   SER_light_cruiser:0 "경순양함을 설계"
    SER_light_cruiser_desc:1 "We must have a new, modern cruiser to serve as the backbone of our Adriatic fleet."
    SER_naval_bombers:0 "해상 폭격기"
    SER_naval_bombers_desc:1 "The Adriatic is long, but narrow, making it easily accessible to airplanes based off our airfields. By developing dedicated naval bomber models this could significantly improve the chances of our navy against more powerful adversaries."
