--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -160,18 +160,18 @@ news.3138.a:0 "코민테른이 성장하는군..."
 news.3138.b:0 "모든 노동자들을 위한 연대다!"
 news.3138.c:0 "제국의 암흑의 날이다..."
 news.3138.e:0 "세계혁명을 위한 또 다른 발걸음이다!"
-news.3139.t:0 "The Christmas Raid"
-news.3139.d:0 "On the 23rd December 1939, the IRA raided the Magazine Fort in Dublin. \n\n Though they had managed to mostly seize Irish munitions, they were reclaimed very shortly afterwards, and many IRA volunteers were caught and arrested. Many high ranking IRA members have been executed, and the Oireachtas have been given emergency powers to deal with this crisis."
-news.3139.a:0 "A victory for Ireland!"
-news.3139.b:0 "Good for them."
-news.3133.t:0 "Anglo-Irish Trade War Ends"
-news.3133.d:0 "The Anglo-Irish Trade War, also known as the 'Economic War', though not a real war per se, had a disasterous effect on post Great Depression Britain and Ireland. \n\n However, the Eire (Confirmation of Agreements) Act has established the end of the 'war', and now Irish and British industries will benefit from more free trade."
-news.3133.a:0 "Finally!"
-news.3133.b:0 "Good for them."
-news.3135.t:0 "Oskar Metzke"
-news.3135.d:0 "Today, a man was found in Castletownroche, in Cork, who gave his name as 'Oskar Metzke', claiming to be a Czech veteran. When searched, he appeared to have a map of the country, a compass, and a Luger pistol. \n\n Soon thereafter, while in the custody of the Garda, the Irish police, he died after a series of convulsions, later found to be due to cyanide he had swallowed. Many theorise he was a German spy."
-news.3135.a:0 "A German spy? Here?!"
-news.3135.b:0 "Okay"
+news.3139.t:0 "크리스마스 급습"
+news.3139.d:0 "1939년 12월 23일, IRA는 더블린의 매거진 요새를 급습했습니다. \n\n 그들은 아일랜드산 군수품을 압수했지만 얼마 지나지 않아 회수되었고, 많은 IRA 자원병들이 붙잡혀 체포되었습니다. 고위 IRA 회원들이 대거 처형됐고, 에러크터스에 이 위기를 대처할 수 있는 비상권이 주어졌습니다."
+news.3139.a:0 "아일랜드의 승리다!"
+news.3139.b:0 "그들에게 좋은 일이군."
+news.3133.t:0 "영국-아일랜드 무역전쟁이 끝나다"
+news.3133.d:0 "실제 전쟁은 아니지만 '경제 전쟁'으로도 알려진 영국-아일랜드 무역 전쟁은 대공황 이후 영국과 아일랜드에 재앙적인 영향을 미쳤습니다. \n\n 그러나 에이레(협의 완료)법은 '전쟁'의 종말을 정했고, 이제 아일랜드와 영국 산업도 더 많은 자유무역의 혜택을 보게될 것입니다."
+news.3133.a:0 "마침내!"
+news.3133.b:0 "그들에게 좋은 일이군."
+news.3135.t:0 "오스카 메츠케"
+news.3135.d:0 "오늘, 코크의 캐슬타운로쉐에서 체코 참전군인이라고 주장하며 '오스카 메츠케'라고 이름을 댄 한 남자가 발견되었습니다. 수색했을때 그는 이 나라의 지도와 나침반, 그리고 루거 권총을 가지고 있는 것처럼 보였습니다. \n\n 곧이어 아일랜드 경찰인 평화수호대의 구류 중에 그는 일련의 경련 끝에 죽었는데, 나중에 그가 삼킨 것 청산가리 때문인 것으로 밝혀졌습니다. 많은 사람들은 그가 독일 스파이라고 추측합니다."
+news.3135.a:0 "독일 스파이? 여기에?!"
+news.3135.b:0 "알았다"
 news.3132.t:0 "The Glimmer Men"
 news.3132.d:0 "The supply of coal in Ireland is dwindling, many of the gasworks have shut down. While research is being done into using peat rather than coal, the Irish government has begun to tighten controls on gas supply, with the Minister for Supplies threatening an official ration of gas. \n\n This has lead to inspectors checking people are not using gas at restricted times, being nicknamed 'glimmer men' by the Irish people."
 news.3132.a:0 "Dev, the gas stove and the glimmerman"
